docs/pages/versions/v57.0.0/sdk/ui/swift-ui/overlay.mdx
---
title: Overlay
description: A SwiftUI Overlay component for layering content on top of another view.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvOS', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Overlay matches the official SwiftUI [overlay](<https://developer.apple.com/documentation/swiftui/view/overlay(alignment:content:)>) modifier and provides a way to layer secondary content on top of a view, positioned with a specified alignment.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/overlay/ios-light.webp"
  darkSrc="/static/images/expo-ui/overlay/ios-dark.webp"
  alt="A bell icon with a red 3 notification badge overlaid at the top-trailing corner"
/>

## Installation

<APIInstallSection />

## Usage

<ComponentExample
  title="OverlayExample.tsx"
  src="/static/images/expo-ui/examples/overlay-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/overlay-basic-ios-dark.webp"
  alt="A blue bell icon with a red circular badge showing 3 at its top-trailing corner">

```tsx
import { Host, Overlay, Text, Image } from '@expo/ui/swift-ui';
import {
  foregroundStyle,
  frame,
  font,
  background,
  clipShape,
  offset,
} from '@expo/ui/swift-ui/modifiers';

export default function OverlayExample() {
  return (
    <Host
      style={{
        flex: 1,
        justifyContent: 'center',
        alignItems: 'center',
      }}>
      <Overlay alignment="topTrailing">
        <Image
          systemName="bell.fill"
          modifiers={[
            font({ size: 28 }),
            foregroundStyle('#007AFF'),
          ]}
        />
        <Overlay.Content>
          <Text
            modifiers={[
              font({ size: 11, weight: 'bold' }),
              foregroundStyle('#FFFFFF'),
              frame({ width: 18, height: 18 }),
              background('#FF3B30'),
              clipShape('circle'),
              offset({ x: 8, y: -8 }),
            ]}>
            3
          </Text>
        </Overlay.Content>
      </Overlay>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Overlay } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/overlay"
  apiName="Overlay"
/>
